3rd Science Day: direct links

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -84,9 +84,9 @@
       <li><a href="http://events.mi.hdm-stuttgart.de/2013-11-08-scienceday">3rd Science Day</a>,
         18 November 2013. Topics:
         <ul>
-          <li>Applied Science – Food Security (<span lang="de">Jan Mühlena</span>, 86 minutes, in English), </li>
-          <li>Science – <span lang="de">bei uns? (Walter Kriha</span>, 49 minutes, in German),</li>
-          <li><span lang="de">Wie konnte das passieren? – Entstehung belebter Materie aus unbelebter (Andreas Stiegler</span>, 163 minutes, in German).</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2013-11-08-scienceday/applied-science-food-security">Applied Science – Food Security</a> (<span lang="de">Jan Mühlena</span>, 86 minutes, in English),</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2013-11-08-scienceday/science-bei-uns">Science – <span lang="de">bei uns?</span></a> (<span lang="de">Walter Kriha</span>, 49 minutes, in German),</li>
+          <li><span lang="de"><a href="http://events.mi.hdm-stuttgart.de/2013-11-08-scienceday/wie-konnte-das-passieren-entstehung-belebter-materie-aus-unbelebter">Wie konnte das passieren? – Entstehung belebter Materie aus unbelebter</a> (Andreas Stiegler</span>, 163 minutes, in German).</li>
         </ul>
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2014-05-09-scienceday">4th Science Day</a>,
