Morissey: best books on poetry

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -440,6 +440,17 @@
         <i class="magazine">Quillette</i>, 15.04.2018.
         <!--@@-->
       </li>
+      <li>Morrissey, Sinéad:
+        <a href="https://fivebooks.com/best-books/sinead-morrissey-on-poetry/">The best books on Poetry</a>,
+        <i class="website">Five Books</i> (no date; April 2018?). The poet recommends the following books:
+        <ul>
+          <li><i class="booktitle">Breaking News</i> by Ciaran Carson,</li>
+          <li><i class="booktitle">Translations from a Natural World</i> by Les Murray,</li>
+          <li><i class="booktitle">Autumn Journal</i> by Louis MacNeice,</li>
+          <li><i class="booktitle">The Beauty of the Husband</i> by Anne Carson and</li>
+          <li><i class="booktitle">The Complete Poems 1927 – 1979</i> by Elizabeth Bishop.</li>
+        </ul>
+      </li>
     </ul>
 
     <p>Introductions to literary criticism:</p>
