HdM Science Day Dec 2015

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -108,7 +108,7 @@
       <li><a href="http://events.mi.hdm-stuttgart.de/2015-06-26-science-day">6th Science Day</a>,
         26 June 2015. Topics:
         <ul>
-          <li><span lang="de">Relativitätstheorie (Andreas Stiegler</span>, 110 minutes, in German),</li>
+          <li><span lang="de"><a href="http://events.mi.hdm-stuttgart.de/2015-06-26-science-day/Relativit%C3%A4tstheorie">Relativitätstheorie</a> (Andreas Stiegler</span>, 110 minutes, in German),</li>
           <li>Horror in <abbr>VR</abbr> (<span lang="de">Maximilian Krauß</span>, 97 minutes<!--@@languange?-->).</li>
           <!--<li>Ludwig Fleck: cancelled</li>-->
         </ul>
@@ -116,9 +116,9 @@
       <li><a href="http://events.mi.hdm-stuttgart.de/2015-12-18-science-day">7th Science Day</a>,
         18 December 2015. Topics:
         <ul>
-          <li>The Dark Side (<span lang="de">Andreas Stiegler</span>, 130 minutes, in German),</li>
-          <li>Marine Biology (<span lang="de">Benjamin Morgner</span>, 62 minutes, in German),</li>
-          <li>A Biochemical Approach to Nutrition (<span lang="de">Stefan Radicke</span>, 95 minutes, in German; no sound in the first minute).</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2015-12-18-science-day/The%20Dark%20Side">The Dark Side</a> (<span lang="de">Andreas Stiegler</span>, 130 minutes, in German),</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2015-12-18-science-day/Marine%20Biology">Marine Biology</a> (<span lang="de">Benjamin Morgner</span>, 62 minutes, in German),</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2015-12-18-science-day/A%20biochemical%20approach%20to%20Nutrition">A Biochemical Approach to Nutrition</a> (<span lang="de">Stefan Radicke</span>, 95 minutes, in German; no sound in the first minute).</li>
         </ul>
       </li>
       <li>
