Machiavelli: primary & secondary sources
Machiavelli: The Art of War (U Chicago P), Letters (U Chicago P),
Machiavelli and His Friends, Florentine Histories. Skinner VSI. Cahn:
Political Philosophy. Wolff: Introduction to Pollitical Philosophy.

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1212,7 +1212,7 @@
       <li>To do: find research articles that support or contradict Thor Heyerdahl's findings.</li>
     </ul>
 
-    <h3>Machiavelli</h3>
+    <h3 id="machiavelli">Machiavelli</h3>
     <p>Machiavelli's name is usually used as a by-word for a type of politics in which
       the end justifies the means. This simplification does not do justice to his legacy.
     </p>
@@ -1228,10 +1228,42 @@
         <i class="booktitle">The Prince</i>. Translated by Peter Bondanella and Edited by Maurizio Viroli.
         Oxford University Press, 2008.
         <a href="https://global.oup.com/academic/product/the-prince-9780199535699"><abbr>ISBN</abbr> 9780199535699</a>.
+        <br />This is (or was) the first English translation based on Giorgio Inglese's critical edition of the Italian text.
       </li>
       <li>Machiavelli, Niccolò:
         <i class="booktitle">Discourses on Livy</i>. Translated by Julia Conaway Bondanella and Peter Bondanella. Oxford World's Classics. Oxford University Press, 2008. (448 pages)
         <a href="https://global.oup.com/academic/product/discourses-on-livy-9780199555550"><abbr>ISBN</abbr> 9780199555550</a>.
+      </li>
+      <li>Machiavelli, Niccolò:
+        <i class="booktitle">The Art of War</i>. Translated, Edited, and with a Commentary by Christopher Lynch. University of Chicago Press, 2003, 2005. (312 pages)
+        <a href="http://press.uchicago.edu/ucp/books/book/chicago/A/bo3632018.html"><abbr>ISBN</abbr> 9780226500461</a>.
+        <br /><q>Praised by the finest military minds in history and said to have influenced no lesser lights than Frederick the Great and Napoleon, 
+          the <i class="booktitle">Art of War</i> is essential reading for anyone who wants to understand the history and theory of war in the West—and 
+          for readers of <i class="booktitle">The Prince</i> and <i class="booktitle">Discourse on Livy</i> who seek to explore more fully the connection between war and politics in Machiavelli's thought.</q>
+      </li>
+      <li>Machiavelli, Niccolò:
+        <i class="booktitle">The Letters of Machiavelli</i>. Edited and translated by Allan Gilbert. University of Chicago Press, 1961, 1988. (252 pages)
+        <a href="http://press.uchicago.edu/ucp/books/book/chicago/L/bo3620151.html"><abbr>ISBN</abbr> 9780226500416</a>.
+      </li>
+      <li>Machiavelli, Niccolò:
+        <i class="booktitle">Machiavelli and His Friends: Their Personal Correspondence</i>. Edited and Translated by James B. Atkinson. Northern Illinois University Press, 1996. (650 pages)
+        <a href="http://www.niupress.niu.edu/niupress/scripts/book/bookResults.asp?ID=512"><abbr>ISBN</abbr> 978-0-87580-599-3</a>.
+      </li>
+      <li>Machiavelli, Niccolò:
+        <i class="booktitle">Florentine Histories</i>. Translated by Laura F. Banfield &amp; Harvey C. Mansfield Jr. 
+        <a href="https://press.princeton.edu/titles/4190.html">Princeton University Press</a>.
+        (1988, 1990: <abbr>ISBN</abbr> 0-691-00863-9).
+      </li>
+      <li>Machiavelli, Niccolò; Musa, Mark (translator); Bondanella, Peter (translator):
+        <i class="booktitle">The Portable Machiavelli</i>. Penguin Classics. Penguin, 1979. (576 pages)
+        <a href="https://www.penguin.co.uk/books/14758/the-portable-machiavelli/9780140150926/"><abbr>ISBN</abbr> 9780140150926</a>.
+        Contains private letters, <i class="booktitle">The Prince</i>, <i class="booktitle">The Discourses</i> (abridged), <i class="booktitle">Belfagor</i>, <i class="booktitle">The Mandrake Root</i>, <i class="booktitle">The Art of War</i> (abridged),
+        <i class="booktitle">The Life of Castruccio Castracani of Lucca</i> and <i class="booktitle">The History of Florence</i> (abridged).
+      </li>
+      <li>Skinner, Quentin:
+        <i class="booktitle">Machiavelli: A Very Short Introduction</i>. Very Short Introductions. Oxford University Press, 2000.
+        <a href="https://global.oup.com/academic/product/machiavelli-a-very-short-introduction-9780192854070"><abbr>ISBN</abbr> 9780192854070</a>.
+        <!--@@German translation: Junius (out of print?)-->
       </li>
       <li>Skinner, Quentin:
         <a href="https://www.youtube.com/watch?v=gH-NxQmf87k">How Machiavellian was Machiavelli?</a>,
@@ -1277,6 +1309,17 @@
         Benvenuto Cellini’s <i class="booktitle">Autiobiography</i>.
       </li>
       <!-- https://www.youtube.com/watch?v=u2FANdhTDyI 10. New Modes and Orders: Machiavelli's The Prince (chaps. 1-12)  - YaleCourses -->
+      <li>Cahn, Steven:
+        <i class="booktitle">Political Philosophy: The Essential Texts</i>. Third edition. Oxford University Press, 2015. (1152 pages)
+        <a href="https://global.oup.com/academic/product/political-philosophy-9780190201081"><abbr>ISBN</abbr> 9780190201081</a>.
+      </li>
+      <li>Wolff, Jonathan:
+        <i class="booktitle">An Introduction to Political Philosophy</i>. Third edition. Oxford University Press, 2015. (256 pages)
+        <a href="https://global.oup.com/academic/product/an-introduction-to-political-philosophy-9780199658015"><abbr>ISBN</abbr> 9780199658015</a>.
+        <br />From the publisher's description:
+        <q>Widely recognised to be a `classic` text written by a leading scholar, active in contemporary research</q>.
+        <!--Wolff also wrote 'Why Read Marx Today?', OUP 2013, 144 pages, ISBN 9780192805058 : https://global.oup.com/academic/product/why-read-marx-today-9780192805058 -->
+      </li>
     </ul>
 
     <h2 id="language">Language</h2>
@@ -2770,11 +2813,21 @@
       * Dartmouth on edX: The American Renaissance: Literature of the 19th Century [2015]: https://www.youtube.com/watch?v=z68I2QF2HZ8 
 
       Cicero:
+      * Cicero: The Republic and The Laws. A new translation by Niall Rudd. OUP, 2008. https://global.oup.com/academic/product/the-republic-and-the-laws-9780199540112 
+      * Cicero: Selected Works. Translated with an introduction by Michael Grant. Penguin, 1960, ...
+      * Cicero: On Obligations [De Officiis]. Translated by P. G. Walsh. OUP, 2008. (288 pages): https://global.oup.com/academic/product/on-obligations-9780199540716 
+        "written hurriedly not long before Cicero's death" (https://global.oup.com/academic/product/cicero-de-officiis-9780198146735 )
+      * Anthony Everitt: Cicero: The Life and Times of Rome's Greatest Politician. Random House, 2003.
+      * Raphael Woolf: Cicero: The Philosophy of a Roman Sceptic. Routledge, 2015.
+      * GARY A. REMER: Ethics and the Orator: THE CICERONIAN TRADITION OF POLITICAL MORALITY. Uni of Chicago P 2017: http://press.uchicago.edu/ucp/books/book/chicago/E/bo25469504.html
+      * Kathryn Tempest: Cicero: Politics and Persuasion in Ancient Rome. Bloomsbury Academic, 2003.
       * Catherine Steel: The Cambridge Companion to Cicero. Cambridge University Press, 2013. ISBN 9780521729802. http://www.cambridge.org/us/academic/subjects/classical-studies/classical-literature/cambridge-companion-cicero?format=PB 
 
       Other:
       * Redcliffe N. Salaman: The History and Social Influence of the Potato. 2nd Edition. Cambridge UP, 1985. ISBN 9780521316231. http://www.cambridge.org/de/academic/subjects/history/regional-and-world-history-general-interest/history-and-social-influence-potato-2nd-edition?format=PB 
       * Antoin Sevruguin: https://en.wikipedia.org/wiki/Antoin_Sevruguin & http://www.iranicaonline.org/articles/sevruguin-antoin-1 
+
+      * Australian academic claims China book 'censored', BBC, 13 November 2017: http://www.bbc.com/news/world-australia-41964047
     -->
   </main>
 
