--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         have been responsible for an equally vast ignorance. When there is so much to be known, when there are so many fields of knowledge in which the same words are used with different meanings, 
         when every one knows a little about a great many things, it becomes increasingly difficult for anyone 
         to know whether he knows what he is talking about or not. And when we do not know, or when we do not know enough, we tend always to substitute emotions for thoughts.</q>
-        <cite><span lang="de">T. S. Eliot</span>, &ldquo;The Perfect Critic&rdquo;, in <i class="booktitle">The Sacred Wood</i> (1921).</cite>
+        <cite>T. S. Eliot, &ldquo;The Perfect Critic&rdquo;, in <i class="booktitle">The Sacred Wood</i> (1921).</cite>
       </p>
     </blockquote>
     <!-- 
