Links Science Day June 2016

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -125,9 +125,9 @@
         <a href="http://events.mi.hdm-stuttgart.de/2016-06-24-8-science-day">8th Science Day</a>,
         24 June 2016. Topics:
         <ul>
-          <li>Intelligence (<span lang="de">Andreas Stiegler</span>, 148 minutes, in German),</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2016-06-24-8-science-day/Intelligence">Intelligence</a> (<span lang="de">Andreas Stiegler</span>, 148 minutes, in German),</li>
           <li>Motivation (<span lang="de">Maximilian Krauß</span>, 90 minutes, in German),</li>
-          <li>Cuba (<span lang="de">Benjamin Morgner</span>, 120 minutes, in German).</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2016-06-24-8-science-day/Cuba">Cuba</a> (<span lang="de">Benjamin Morgner</span>, 120 minutes, in German).</li>
         </ul>
       </li>
       <li>
