History of Science Society

--- a/science/index.html
+++ b/science/index.html
@@ -309,9 +309,12 @@
 
     <h2>History of Science</h2>
     <ul>
+      <li>
+        <a href="https://hssonline.org/">History of Science Society</a> (founded in 1924).
+      </li>
       <li><strong><a href="https://www.futurelearn.com/courses/scientific-revolution">The Scientific Revolution: Understanding the Roots of Modern Science</a></strong>
         is a free online course by the University of Groningen hosted on FutureLearn.
-        The first run of the course starts on 30 October 2017.
+        The first run of the course started on 30 October 2017.
       </li>
       <li lang="nl"><a href="http://cas.ou.edu/rienk-vermij">Vermij, Rienk</a>: 
         <i class="booktitle">Kleine geschiedenis van de wetenschap</i>.
