FL: The Scientific Revolution: next run of the course

--- a/science/index.html
+++ b/science/index.html
@@ -314,7 +314,7 @@
       </li>
       <li><strong><a href="https://www.futurelearn.com/courses/scientific-revolution">The Scientific Revolution: Understanding the Roots of Modern Science</a></strong>
         is a free online course by the University of Groningen hosted on FutureLearn.
-        The first run of the course started on 30 October 2017.
+        The first run of the course started on 30 October 2017. The next run starts on 4 June 2018.
       </li>
       <li lang="nl"><a href="http://cas.ou.edu/rienk-vermij">Vermij, Rienk</a>: 
         <i class="booktitle">Kleine geschiedenis van de wetenschap</i>.
