Science Day January 2017

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -134,9 +134,9 @@
         <a href="http://events.mi.hdm-stuttgart.de/2017-01-20-9-science-day">9th Science Day</a>,
         20 January 2017. Topics:
         <ul>
-          <li>Time (<span lang="de">Andreas Stiegler</span>, 145 minutes, in German),</li>
-          <li><span lang="de">Von Experten und Energie (Franz Hein</span>, 73 minutes, in German),</li>
-          <li><span lang="de">Diskussion: Wahrheit? (Walter Kriha</span>, 85 minutes, in German).</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2017-01-20-9-science-day/Time">Time</a> (<span lang="de">Andreas Stiegler</span>, 145 minutes, in German),</li>
+          <li><span lang="de"><a href="http://events.mi.hdm-stuttgart.de/2017-01-20-9-science-day/Von%20Experten%20und%20Energie">Von Experten und Energie</a> (Franz Hein</span>, 73 minutes, in German),</li>
+          <li><span lang="de"><a href="http://events.mi.hdm-stuttgart.de/2017-01-20-9-science-day/Diskussion%3A%20Wahrheit">Diskussion: Wahrheit?</a> (Walter Kriha</span>, 85 minutes, in German).</li>
         </ul>
       </li>
       <li>
