B. Roeck; Münkler & Straßenberger

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1309,6 +1309,13 @@
         Benvenuto Cellini’s <i class="booktitle">Autiobiography</i>.
       </li>
       <!-- https://www.youtube.com/watch?v=u2FANdhTDyI 10. New Modes and Orders: Machiavelli's The Prince (chaps. 1-12)  - YaleCourses -->
+      <li lang="de">Roeck, Bernd:
+        <i class="booktitle">Der Morgen der Welt. Geschichte der Renaissance</i>. C. H. Beck, 2017.
+        <a href="https://www.chbeck.de/roeck-morgen-welt/product/16572675"><abbr>ISBN</abbr> 978-3-406-69876-7</a>.
+        <!--Rezension Herfried Münkler: https://www.zeit.de/2017/48/der-morgen-der-welt-bernd-roeck-renaissance-geschichte
+          Interview: https://www.welt.de/kultur/literarischewelt/article169418254/Ewiger-Fruehling-hier-liegt-die-Zauberformel.html
+        -->
+      </li>
       <li>Cahn, Steven:
         <i class="booktitle">Political Philosophy: The Essential Texts</i>. Third edition. Oxford University Press, 2015. (1152 pages)
         <a href="https://global.oup.com/academic/product/political-philosophy-9780190201081"><abbr>ISBN</abbr> 9780190201081</a>.
@@ -1319,6 +1326,12 @@
         <br />From the publisher's description:
         <q>Widely recognised to be a `classic` text written by a leading scholar, active in contemporary research</q>.
         <!--Wolff also wrote 'Why Read Marx Today?', OUP 2013, 144 pages, ISBN 9780192805058 : https://global.oup.com/academic/product/why-read-marx-today-9780192805058 -->
+        <!--Tracey Gladstone-Sovell. Review of Wolff, Jonathan, An Introduction to Political Philosophy. H-Teachpol, H-Net Reviews. October, 1998 https://www.h-net.org/reviews/showpdf.php?id=2389 -->
+      </li>
+      <li lang="de">Münkler, Herfried; Straßenberger, Grit:
+        <i class="booktitle">Politische Theorie und Ideengeschichte. Eine Einführung</i>. C. H. Beck, 2016.
+        <a href="https://www.chbeck.de/muenkler-strassenberger-politische-theorie-ideengeschichte/product/30082"><abbr>ISBN</abbr> 978-3-406-59985-9</a>.
+        <!--https://hpd.de/artikel/politische-theorie-und-ideengeschichte-zur-einfuehrung-12813-->
       </li>
     </ul>
 
@@ -2826,6 +2839,12 @@
       Other:
       * Redcliffe N. Salaman: The History and Social Influence of the Potato. 2nd Edition. Cambridge UP, 1985. ISBN 9780521316231. http://www.cambridge.org/de/academic/subjects/history/regional-and-world-history-general-interest/history-and-social-influence-potato-2nd-edition?format=PB 
       * Antoin Sevruguin: https://en.wikipedia.org/wiki/Antoin_Sevruguin & http://www.iranicaonline.org/articles/sevruguin-antoin-1 
+  
+      * Christopher de Bellaigue: The Islamic Enlightenment: The Struggle Between Faith and Reason, 1798 to Modern Times. W. W. Norton & Co., 2017, 2018. 432 pages. ISBN 978-1-63149-398-0 : http://books.wwnorton.com/books/detail.aspx?ID=4294995600
+  
+      * Élisabeth Martens (https://fr.wikipedia.org/wiki/%C3%89lisabeth_Martens): Qui sont les Chinois ? Pensées et paroles de Chine, Paris, Max Milo, 2013, 318 p.
+        https://www.eyrolles.com/Loisirs/Livre/qui-sont-les-chinois-9782315003853
+        https://sionneau.com/blog/qui-sont-les-chinois/
 
       * Australian academic claims China book 'censored', BBC, 13 November 2017: http://www.bbc.com/news/world-australia-41964047
     -->
