Various minor edits

--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -66,7 +66,7 @@
     </blockquote>
 
     <p>Reading the works of <span lang="de">Georg Wilhelm Friedrich Hegel</span> 
-      (1770 - 1831)
+      (1770 – 1831)
       can feel like the philosophical equivalent of listening to 
       <a href="https://en.wikipedia.org/wiki/Vogon#Poetry">Vogon poetry</a>, 
       but many later philosophical schools (<abbr>e.g.</abbr> marxism, 
@@ -83,11 +83,11 @@
 
     <h2>Introductions to Hegel</h2>
     <ul>
-      <li>Beiser, Frederick: 
-        <i class="booktitle">Hegel</i>. Routledge Philosophers. New York, Routledge, 2005. (364 p.)
+      <li>Beiser, Frederick:
+        <i class="booktitle">Hegel</i>. Routledge Philosophers. New York, Routledge, 2005. (364 pages)
         <a href="https://www.routledge.com/products/9780415312080"><abbr>ISBN</abbr> 9780415312080</a>.
         <br />This book tries to provide a comprehensive introduction to Hegel's philosophy.
-        Its <i>Further Reading</i> section contains a annoted list of references that are useful 
+        Its <i>Further Reading</i> section contains an annotated list of references that are useful 
         for beginners. Other general introductions recommended by the author are 
         Charles Taylor's <i class="booktitle">Hegel</i> (1975), Stepen Houlgate's
         <i class="booktitle">Freedom, Truth and History: An Introduction to Hegel's Philosophy</i> (1991),
@@ -96,7 +96,7 @@
       </li>
       <li lang="de">Römpp, Georg:
         <i class="booktitle">Hegel leicht gemacht: Eine Einführung in seine Philosophie</i>.
-        Köln: Böhlau, 2008. <span lang="en-GB">(298 p.)
+        Köln: Böhlau, 2008. <span lang="en-GB">(298 pages)
         <a href="http://www.utb-shop.de/hegel-leicht-gemacht-2584.html"><abbr>ISBN</abbr> 9783825231149</a>.
         <br />An introduction for beginning philosophy students.
         Its bibliography contains useful annotations and helps students find out which 
@@ -105,7 +105,7 @@
       </li>
       <li lang="de">Emundts, Dina; Horstmann, Rolf-Peter:
         <i class="booktitle">Georg Wilhelm Friedrich Hegel. Eine Einführung</i>.
-        Stuttgart: Reclam, 2002. <span lang="en-GB">(112 p.)
+        Stuttgart: Reclam, 2002. <span lang="en-GB">(112 pages)
         <a href="http://www.reclam.de/detail/978-3-15-018167-6/Emundts__Dina__Horstmann__Rolf_Peter/Georg_Wilhelm_Friedrich_Hegel"><abbr>ISBN</abbr> 978-3-15-018167-6</a>.
         <br />Contains a short biography and then discusses the development of Hegel's system in his early years,
         the &ldquo;system&rdquo; itself, its metaphysical foundations, and the later works.
@@ -114,7 +114,7 @@
       </li>
       <li lang="de">Schnädelbach, Herbert:
         <i class="booktitle">Georg Wilhelm Friedrich Hegel zur Einführung</i>. 3., verbesserte Auflage.
-        Hamburg: Junius, 2007. <span lang="en-GB">(192 p.)
+        Hamburg: Junius, 2007. <span lang="en-GB">(192 pages)
         <a href="http://www.junius-verlag.de/buecher/georg-wilhelm-friedrich-hegel"><abbr>ISBN</abbr> 978-3-88506-352-0</a>.
         <br />Recommended as a thorough introduction by Römpp (see above), but not an easy read.</span>
         Schnädelbach <span lang="en-GB">starts with the basic ideas that one needs to understand Hegel's work,
@@ -193,7 +193,7 @@
         <a href="https://www.youtube.com/watch?v=H5JGE3lhuNo">Philosophy – Hegel</a>
         (YouTube, 7 minutes, 10.07.2015).
       </li>
-      <li lang="de">Stadtbibliothek Stuttgart: 
+      <li lang="de">Stadtbibliothek Stuttgart:
         <a href="http://www1.stuttgart.de/stadtbibliothek/bvs/ausgabe.php?sid=205">Georg Wilhelm Friedrich Hegel</a>.
       </li>
       <li><a href="https://philosophy.stackexchange.com/q/40052/23586">How to study Hegel?</a>:
