Science Day December 2017.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -143,9 +143,9 @@
         <a href="http://events.mi.hdm-stuttgart.de/2017-12-22-10-science-day">10th Science Day</a>,
         22 December 2017. Topics:
         <ul>
-          <li>Technological Singularity (<span lang="de">Andreas Stiegler</span>, 150 minutes, in German),</li>
-          <li>Genetically Modified Organisms (<span lang="de">Benjamin Morgner</span>, 82 minutes, in German),</li>
-          <li>The Shock Doctrine (<span lang="nl">Christophe Strobbe</span>, 54 minutes, in English).</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2017-12-22-10-science-day/Technological%20Singularity">Technological Singularity</a> (<span lang="de">Andreas Stiegler</span>, 150 minutes, in German),</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2017-12-22-10-science-day/Genetically%20Modified%20Organisms">Genetically Modified Organisms</a> (<span lang="de">Benjamin Morgner</span>, 82 minutes, in German),</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2017-12-22-10-science-day/The%20Shock%20Doctrine">The Shock Doctrine</a> (<span lang="nl">Christophe Strobbe</span>, 54 minutes, in English).</li>
         </ul>
       </li>
       <li>Science Day May/June 2018: date to be determined. <!--Topics:
