Geist & Lohn: how might AI affect the risk of ...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -499,6 +499,11 @@
         <a href="https://algorithmwatch.org/en/dont-fear-ai/">The emergence of a new technology requires new rules: how do we deal with robots?</a>,
         <i class="website">AlgorithmWatch</i>, 12.04.2018.
       </li>
+      <li>Geist, Edward; Lohn, Andrew J.:
+        <a href="https://www.rand.org/pubs/perspectives/PE296.html">How Might Artificial Intelligence Affect the Risk of Nuclear War?</a>,
+        <i class="website">RAND Corporation</i>, April 2018; <abbr>DOI</abbr>: 10.7249/PE296.
+        <!--@@download-->
+      </li>
     </ul>
 
     <h3>Introductory Articles and Materials</h3>
