John Gray: critiques of utopia and apocalypse

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1469,6 +1469,25 @@
           <li><i class="booktitle">The Postmodern Condition</i> by Jean-François Lyotard.</li>
         </ul>
       </li>
+      <li>Gray, John:
+        <a href="https://fivebooks.com/best-books/john-gray-on-critiques-of-utopia-and-apocalypse/">John Gray recommends the best Critiques of Utopia and Apocalypse</a>,
+        <i class="website">Five Books</i> (no date). Gray's recommendations are:
+        <ul>
+          <li><i class="booktitle">The Invisible Writing</i> (autobiographical writings, 1932 to 1940) by Arthur Koestler
+            (who is best know for his book <i class="booktitle">Darkness at Noon</i>),
+          </li>
+          <li><a href="https://en.wikipedia.org/wiki/Civilization_and_Its_Discontents"><i class="booktitle">Civilisation and Its Discontents</i></a>
+            (<i class="booktitle">Unbehagen in der Kultur</i>, 1930) by Sigmund Freud,
+          </li>
+          <li><a href="https://en.wikipedia.org/wiki/The_Pursuit_of_the_Millennium"><i class="booktitle">The Pursuit of the Millennium: Revolutionary Millenarians and Mystical Anarchists of the Middle Ages</i></a>
+            (1957, 1970) by Norman Cohn,
+          </li>
+          <li><a href="https://en.wikipedia.org/wiki/The_Sense_of_an_Ending:_Studies_in_the_Theory_of_Fiction"><i class="booktitle">The Sense of an Ending: Studies in the Theory of Fiction</i></a>
+            (1967) by Frank Kermode,
+          </li>
+          <li><a href="https://en.wikipedia.org/wiki/Hello_America"><i class="booktitle">Hello America</i> (1981) by J. G. Ballard.</li>
+        </ul>
+      </li>
       <li>Monbiot, George:
         <a href="https://fivebooks.com/best-books/george-monbiot-essential-reading-list/">George Monbiot — with An Essential Reading List</a>,
         <i class="website">Five Books</i> (March 2018). Monbiot recommends the following books:
