--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -56,7 +56,7 @@
 
   <main>
     <p>Each semester, Stuttgart Media University (<span lang="de">Hochschule der Medien</span>)
-      organises a &ldquo;science day&rdquo;. This is an event where researches present
+      organises a &ldquo;science day&rdquo;. This is an event where researchers and students present
       topics that are not part of the regular curriculum at the university.
     </p>
 
@@ -735,7 +735,8 @@
         <i class="booktitle">Histoire des croisades</i>.
         Perrin, 2014. (336 pages)
         <a href="http://www.editions-perrin.fr/livre/histoire-des-croisades/9782262037734"><abbr>ISBN</abbr> 9782262037734</a>.
-        <!-- also by Jacques Heers: Les négriers en terres d'Islam: La première traite des Noirs VIIe–XVIe siècle. Perrin, 2003: http://www.editions-perrin.fr/livre/les-negriers-en-terres-d-islam/9782262018504 -->
+        <!--also by Jacques Heers: Les négriers en terres d'Islam: La première traite des Noirs VIIe–XVIe siècle. Perrin, 2003: http://www.editions-perrin.fr/livre/les-negriers-en-terres-d-islam/9782262018504 -->
+        <!--See also 'Soliman Le Magnifique' by André Clot? Cf. https://fr.wikipedia.org/wiki/Andr%C3%A9_Clot -->
       </li>
       <li>Frankopan, Peter: 
         <i class="booktitle">The First Crusade: The Call from the East</i>.
@@ -962,6 +963,11 @@
         * Safavid Empire also known as one of the "gunpowder empires": https://en.wikipedia.org/wiki/Gunpowder_Empires#Safavid_Empire 
         * Ottoman Siege of Vienna, 1529: https://en.wikipedia.org/wiki/Siege_of_Vienna 
         * House of Medici, 16th century: https://en.wikipedia.org/wiki/House_of_Medici#16th_century 
+        * Christopher Hibbert: The Rise and Fall of the House of Medici. 1974 (?)
+        * Christopher Hibbert: Florence: The Biography of a City. Viking, 1993; Penguin, 1994.
+        * Miles J. Unger: Magnifico: The Brilliant Life and Violent Times of Lorenzo de' Medici. Simon & Schuster, 2008.
+        * Jacob Burckhardt: Die Kultur der Renaissance in Italien.
+        * Volker Reihardt: Die Renaissance in Italien. Geschichte und Kultur. Beck'sche Reihe, 2002.
         * 1517: Martin Luther: Ninety-five Theses: https://en.wikipedia.org/wiki/Ninety-five_Theses 
       -->
     </ul>
@@ -1263,6 +1269,7 @@
       <li>Skinner, Quentin:
         <i class="booktitle">Machiavelli: A Very Short Introduction</i>. Very Short Introductions. Oxford University Press, 2000.
         <a href="https://global.oup.com/academic/product/machiavelli-a-very-short-introduction-9780192854070"><abbr>ISBN</abbr> 9780192854070</a>.
+        <br />Originally published in 1981; the bibliography was updated for the 2000 reissue.
         <!--@@German translation: Junius (out of print?)-->
       </li>
       <li>Skinner, Quentin:
@@ -1271,7 +1278,7 @@
       </li>
       <li>Mansfield, Harvey:
         <a href="https://www.youtube.com/watch?v=hVnh4woNXFg">Harvey Mansfield on Niccolò Machiavelli and the Origins of Modernity</a>,
-        interview by Bill Kristoll. (67 minutes, uploaded on 6 December 2015.)
+        interview by Bill Kristoll (YouTube, 67 minutes, uploaded on 6 December 2015.)
       </li>
       <li lang="de">Hoeges, Dirk:
         <i class="booktitle">Niccolò Machiavelli – Die Macht und der Schein</i>. 2., aktualisierte und erweiterte Auflage. Peter Lang.
@@ -1283,7 +1290,7 @@
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=163CxqQpqAM">Is Machiavelli's "The Prince" Still Relevant? Modern Philosophy and Leadership - Analysis</a>,
-        1999 (58 minutes).
+        1999 (YouTube, 58 minutes).
       </li>
       <li>The School of Life / Alain de Botton:
         <a href="https://www.youtube.com/watch?v=AOXl0Ll_t9s">Niccolò Machiavelli</a> (7 minutes),
@@ -1302,11 +1309,16 @@
       <li>
         <a href="http://fivebooks.com/interview/ken-bartlett-renaissance-books/">Kenneth Bartlett recommends the best Renaissance Books</a>, 
         <i class="website">Five Books</i> (no date).
-        The five recommendations are Machiavelli’s <i class="booktitle">The Prince</i>, 
-        Francesco Guicciardini’s <i class="booktitle">Ricordi</i>, 
-        Baldasare Castiglione’s <i class="booktitle">The Courtier</i>, 
-        Giorgio Vasari’s <i class="booktitle">Lives of the Artists</i> and
-        Benvenuto Cellini’s <i class="booktitle">Autiobiography</i>.
+        The five recommendations are Machiavelli’s 
+        <a href="https://en.wikipedia.org/wiki/The_Prince"><i class="booktitle">The Prince</i></a> (published 1532), 
+        Francesco Guicciardini’s <i class="booktitle">Ricordi</i> (1512–1530), 
+        Baldasare Castiglione’s 
+        <a href="https://en.wikipedia.org/wiki/The_Book_of_the_Courtier"><i class="booktitle">The Courtier</i></a> (1528), 
+        <!--Norton Critical Edition: http://books.wwnorton.com/books/webad.aspx?id=10647 -->
+        Giorgio Vasari’s 
+        <a href="https://en.wikipedia.org/wiki/Lives_of_the_Most_Excellent_Painters,_Sculptors,_and_Architects"><i class="booktitle">Lives of the Artists</i></a> (1550, 1568) and
+        Benvenuto Cellini’s 
+        <a href="https://en.wikipedia.org/wiki/Benvenuto_Cellini#Autobiography"><i class="booktitle">Autiobiography</i></a> (1558–1563).
       </li>
       <!-- https://www.youtube.com/watch?v=u2FANdhTDyI 10. New Modes and Orders: Machiavelli's The Prince (chaps. 1-12)  - YaleCourses -->
       <li lang="de">Roeck, Bernd:
