Sperl (Hrsg.): Neoliberalismus.

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1974,6 +1974,10 @@
         <i class="booktitle">Neoliberalismus. Ungleichheit als Programm</i>. Unrast Verlag, 2013.
         <a href="https://www.unrast-verlag.de/gesamtprogramm/allgemeines-programm/politik-gesellschaft/neoliberalismus-414-detail"><abbr>ISBN</abbr> 978-3-89771-534-9</a>.
       </li>
+      <li lang="de">Sperl, Gerfried (Herausgeber):
+        <i class="booktitle">Neoliberalismus</i>. Wien: Czernin Verlag, 2015.
+        <a href="http://www.czernin-verlag.com/buch/neoliberalismus"><abbr>ISBN</abbr> 978-3-7076-0551-8</a>.
+      </li>
       <li>Springer, Simon:
         <i class="booktitle">The Discourse of Neoliberalism. An Anatomy of a Powerful Idea</i>.
         Rowman &amp; Littlefield International, 2016. (176 pages)
