Viroli: Machiavelli (Oxford UP, 1998)

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1280,6 +1280,10 @@
         <i class="booktitle">How to Read Machiavelli</i>. Granta / Allen &amp; Unwin, 2008. (128 pages)
         <a href="https://www.allenandunwin.com/browse/books/academic-professional/philosophy/How-To-Read-Machiavelli-Maurizio-Viroli-9781862079915"><abbr>ISBN</abbr> 9781862079915</a>.
       </li>
+      <li>Viroli, Maurizio:
+        <i class="booktitle">Machiavelli</i>. Founders of Modern Political and Social Thought. Oxford University Press, 1998. (260 pages)
+        <a href="https://global.oup.com/academic/product/machiavelli-9780198780892"><abbr>ISBN</abbr> 9780198780892</a>.
+      </li>
       <li>Mansfield, Harvey:
         <a href="https://www.youtube.com/watch?v=hVnh4woNXFg">Harvey Mansfield on Niccolò Machiavelli and the Origins of Modernity</a>,
         interview by Bill Kristoll (YouTube, 67 minutes, uploaded on 6 December 2015.)
