Zeno.org: Hegel.

--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -189,6 +189,10 @@
         <a href="https://www.youtube.com/watch?v=-jaWsJDcXu4">Die Welt ist Geist – Georg Wilhelm Friedrich Hegel</a>
         (<span lang="en">YouTube, 23 minutes, 04.06.2014</span>).
       </li>
+      <li>
+        <a href="http://www.zeno.org/Philosophie/M/Hegel,+Georg+Wilhelm+Friedrich" hreflang="de" lang="de">Hegel, Georg Wilhelm Friedrich</a>,
+        <i class="website">Zeno.org</i>.
+      </li>
       <li>The School of Life:
         <a href="https://www.youtube.com/watch?v=H5JGE3lhuNo">Philosophy – Hegel</a>
         (YouTube, 7 minutes, 10.07.2015).
