Ridolfi: The Life of Niccolo Machiavelli.

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1288,6 +1288,12 @@
         <i class="booktitle">The Routledge Guidebook to Machiavelli's The Prince</i>. The Routledge Guides to the Great Books. Routledge, 2016. (290 pages)
         <a href="https://www.routledge.com/The-Routledge-Guidebook-to-Machiavellis-The-Prince/Scott/p/book/9780415707268"><abbr>ISBN</abbr> 9780415707268</a>.
       </li>
+      <li>Ridolfi, Roberto:
+        <i class="booktitle">The Life of Niccolò Machiavelli</i>. Translated by Cecil Grayson. Routledge Library Editions: Political Science Volume 26. Routledge, 2010. (364 pages)
+        <a href="https://www.routledge.com/The-Life-of-Niccolo-Machiavelli-Routledge-Library-Editions-Political/Ridolfi/p/book/9780415555661"><abbr>ISBN</abbr> 9780415555661</a>.<!--§§§-->
+        <br />Originally published as <i class="booktitle" lang="it">Vita di Niccolò Machiavelli</i> in 1954 and reprinted several times.
+        This is still considered as the standard biography of Machiavelli.
+      </li>
       <li>Mansfield, Harvey:
         <a href="https://www.youtube.com/watch?v=hVnh4woNXFg">Harvey Mansfield on Niccolò Machiavelli and the Origins of Modernity</a>,
         interview by Bill Kristoll (YouTube, 67 minutes, uploaded on 6 December 2015.)
