de Grazia: Machiavelli in Hell.

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1294,6 +1294,12 @@
         <br />Originally published as <i class="booktitle" lang="it">Vita di Niccolò Machiavelli</i> in 1954 and reprinted several times.
         This is still considered as the standard biography of Machiavelli.
       </li>
+      <li>de Grazia, Sebastian:
+        <i class="booktitle">Machiavelli in Hell</i>. Princeton University Press, 1989. Reissue: Vintage, 1994 (<abbr>ISBN</abbr> 0-679-74342-1).
+        <br />This biography was awarded the <a href="http://www.pulitzer.org/winners/sebastian-de-grazia">1990 Pulitzer Prize in biography</a>;
+        in spite of this, the book is now out of print.
+        <!--Can be "borrowed" online: https://archive.org/details/machiavelliinhel00degr -->
+      </li>
       <li>Mansfield, Harvey:
         <a href="https://www.youtube.com/watch?v=hVnh4woNXFg">Harvey Mansfield on Niccolò Machiavelli and the Origins of Modernity</a>,
         interview by Bill Kristoll (YouTube, 67 minutes, uploaded on 6 December 2015.)
