Viroli: Niccolo's Smile (biography, 2000).

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1300,6 +1300,10 @@
         in spite of this, the book is now out of print.
         <!--Can be "borrowed" online: https://archive.org/details/machiavelliinhel00degr -->
       </li>
+      <li>Viroli, Maurizio:
+        <i class="booktitle">Niccolò's Smile: A Biography of Machiavelli</i>. Translated by Antony Shugaar. Farrar, Strauss and Giroux, 2000.
+        <br />Orginally published as <i class="booktitle" lang="it">Il sorriso di Niccolò: Storia di Machiavelli</i> in 1998.
+      </li>
       <li>Mansfield, Harvey:
         <a href="https://www.youtube.com/watch?v=hVnh4woNXFg">Harvey Mansfield on Niccolò Machiavelli and the Origins of Modernity</a>,
         interview by Bill Kristoll (YouTube, 67 minutes, uploaded on 6 December 2015.)
